# fokus-grammar

./: .env.example  .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml  readme.txt  run.bat  run.sh
backend/: Dockerfile  main.py  requirements.txt
static/css/: style.css
static/js/: app.js
templates/: index.html
