[tool.poetry]
name = "fokus-grammar"
version = "0.1.0"
description = "A web application for grammar practice with AI assistance"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
